# mcpserver-sample

./: .gitignore  README.md  file_reader_mcp.py  pyproject.toml  setup.bat  setup.sh  test_server.py
